scout all bases if no known enemy position, misc tweaks